# droplets

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  types.rs
src/backend/: config.rs  digitalocean.rs  mod.rs  ssh.rs
src/ui/: main_view.rs  mod.rs  popup.rs  welcome.rs
